<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginTop="16dp"
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:textColorHint="@color/blue_sky"
        android:hint="@string/hint_name"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_check_circle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_edit_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_edit_left"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/boarder_edit_text"
        tools:ignore="NotSibling" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_family"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boarder_edit_text"
        android:hint="@string/hint_family"
        android:padding="5dp"

        android:drawableStart="@drawable/ic_check_circle"
        android:textColorHint="@color/blue_sky"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        app:layout_constraintStart_toStartOf="@+id/edt_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_name"
        tools:ignore="NotSibling" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_mobile"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:maxLength="11"
        android:inputType="number"
        android:drawableStart="@drawable/ic_check_circle"
        android:background="@drawable/boarder_edit_text"
        android:hint="@string/hint_mobile"
        android:padding="5dp"
        android:textColorHint="@color/blue_sky"
        app:layout_constraintEnd_toEndOf="@+id/edt_family"
        app:layout_constraintStart_toStartOf="@+id/edt_family"
        app:layout_constraintTop_toBottomOf="@+id/edt_family"
        tools:ignore="NotSibling" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_static_mobile"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boarder_edit_text"
        android:drawableStart="@drawable/ic_check_circle"
        android:hint="@string/hint_phone"
        android:padding="5dp"
        android:inputType="number"
        android:textColorHint="@color/blue_sky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_mobile"
        app:layout_constraintStart_toStartOf="@+id/edt_mobile"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobile"
        tools:ignore="NotSibling" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_edit_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_edit_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />
</androidx.constraintlayout.widget.ConstraintLayout>