<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress"

        android:textColor="@color/blue_sky"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_gender"
        app:layout_constraintTop_toTopOf="@+id/vertical_top_gender" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_get_address"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:padding="8dp"
        android:text="safasasfasf"
        android:background="@drawable/boarder_edit_text"
        android:inputType="textMultiLine"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_gender"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/blue_sky"
        app:layout_constraintBottom_toBottomOf="@+id/toggle"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_gender"
        app:layout_constraintTop_toTopOf="@+id/toggle" />

    <RadioGroup
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/pink_out_line"
        android:checkedButton="@+id/offer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_gender"
        app:layout_constraintTop_toBottomOf="@+id/edt_get_address">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/male"
            android:textColorHint="@color/black"
            android:textColor="@color/blue_sky" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/female"
            android:textColor="@color/blue_sky" />
    </RadioGroup>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_bottom_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_top_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>