<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    tools:context=".ui.activity.MainActivity">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toTopOf="@+id/vertical_top" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vertical_top" />

    <TextView
        android:id="@+id/txt_plz_enter"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:text="@string/enter_information"
        android:textColor="@color/gray"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toEndOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <include
        android:id="@+id/iclude_edt"
        layout="@layout/input_edits_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_plz_enter" />

    <include
        android:id="@+id/include_address"
        layout="@layout/address_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/iclude_edt" />

    <TextView
        android:id="@+id/btn_next_level"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/btn_back"
        android:text="@string/next_level"
        app:layout_constraintBottom_toTopOf="@+id/vertical_bottom"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        android:focusable="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>